force-app/main/default/objects/Contact_Additional_Address__c/Contact_Additional_Address__c.object-meta.xml
<CustomObject>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Contact Additional Address</label>
    <nameField>
        <displayFormat>AA-{00}</displayFormat>
        <label>Add&apos;l Address #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Additional Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>