force-app/main/default/objects/Contact_Additional_Address__c/fields/Add_l_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Address_City__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Add&apos;l Address City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>