force-app/main/default/objects/Contact_Additional_Address__c/fields/Add_l_Address_Notes__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Address_Notes__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <inlineHelpText>If &quot;Other&quot; is selected in the Additional Address Type field, provide details here.  Use this field to enter any other Additional Address notes necessary.</inlineHelpText>
    <label>Add&apos;l Address Notes</label>
    <type>TextArea</type>
</CustomField>