force-app/main/default/objects/Contact_Additional_Address__c/fields/Add_l_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Address_Street__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Add&apos;l Address Street</label>
    <type>TextArea</type>
</CustomField>