force-app/main/default/objects/Contact_Additional_Address__c/fields/Add_l_Address_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Address_ZIP_Postal_Code__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Add&apos;l Address ZIP/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>